--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,6 +1,6 @@
 :root {
-  --bg: #2d3436;
-  /*--bg: #000000;*/
+  /*--bg: #2d3436;*/
+  --bg: #000;
   /*--bg: #fff;*/
   --bga: #2d3436e0;
   --fg: white;
